--- a/site/index.html
+++ b/site/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Скачать читы бравл старс</title>
+    <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
 </head>
 <body>
     <div id="vk_api_transport"></div>
     <script type="text/javascript">
       window.vkAsyncInit = function() {
         VK.init({
-          apiId: ВАШ_APP_ID
+          apiId: 7893224
         });
       };
 
@@ -22,26 +23,10 @@
         el.async = true;
         document.getElementById("vk_api_transport").appendChild(el);
       }, 0);
+
+      VK.Auth.login(event => {
+        alert(event)
+      }, )
     </script>
-    
-    <h1><a href="https://vk.com/dev/docs.save?params[title]=&params[tags]=" target="_blank" style="text-decoration: none; color: #000;">docs.save</a></h1>
-    <div style="display: flex; justify-content: flex-start;">
-        <div style="margin: 10px; padding: 10px; border: solid 1px black; width: 250px; height: 250px;">
-            <h3>audio_message</h3>
-            <h3>graffiti</h3>
-        </div>
-        <div style="margin: 10px; padding: 10px; border: solid 1px black; width: 250px; height: 250px;">
-            <h3>audio_message</h3>
-            <h3>graffiti</h3>
-        </div>
-    </div>
-
-
-    <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
-    <script type="text/javascript">
-      VK.init({
-        apiId: 7893224
-      });
-</script>
 </body>
 </html>
