--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Ананимус хаб</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon.png">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -42,5 +41,11 @@
             </form>
         </div>
     </div>
+
+
+    <div id="text">text</div>
+    
+    
+    <script src="script.js"></script>
 </body>
 </html>
