--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
             </form>
         </div>
     </div>
-
-
-    <div id="text">text</div>
-    
-    
+    <div id="text"></div>
     <script src="script.js"></script>
 </body>
 </html>
