--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>ГДЗ от МОРГЕНШТЕРНА</h1>
     </header>
     <div class="flex-center">
-        <h2>docs.save</h2>
+        <h2><a href="https://vk.com/dev/docs.save?params[file]&params[title]&params[tags]">docs.save</a></h2>
     </div>
     <div class="flex-center">
         <div class="frame">
@@ -27,5 +27,6 @@
                 <input type="submit" value="Отправить">
             </form>
         </div>
+    </div>
 </body>
 </html>
